...
      label: 'Clientes',
      color: AppTheme.success,
    ),
    NavItem(
      icon: Icons.route_outlined,
      selectedIcon: Icons.route,
      label: 'Rutero',
      color: AppTheme.info,
    ),
    NavItem(
      icon: Icons.account_balance_wallet_outlined,
      selectedIcon: Icons.account_balance_wallet,
      label: 'Liquidación',
      color: AppTheme.success,
    ),
    NavItem(
      icon: Icons.payments_outlined,
      selectedIcon: Icons.payments,
      label: 'Cobros',
...
